# PlaceNet-Hamlet

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  deploy.sh  mosquitto.conf
.claude/skills/service-management/: SKILL.md
migrations/: 0004_broadcast_keys.sql
src/: app.rs  config.rs  main.rs
src/infra/ca/: ca_service.rs  operations.rs
src/services/: mod.rs
src/services/beacon_management/: key_management.rs  mod.rs  registry.rs
src/services/beacon_management/internals/: handlers.rs  mod.rs  requests.rs  tls.rs  types.rs
src/services/cloud_gateway/: messages.rs
src/services/gateway_mqtt/: gateway_mqtt_service.rs  login.rs  manager.rs  mod.rs  protocol.rs  tasks.rs
src/services/local_gateway/: gateway_service.rs  handlers.rs  handshake.rs  manager.rs  mod.rs  proxy.rs  registry.rs  requests.rs  response.rs  tasks.rs
src/services/local_gateway/internals/: handlers.rs  handshake.rs  headers.rs  mod.rs  proxy.rs  requests.rs  response.rs  types.rs
src/services/mqtt_brokerage/: mod.rs  mosquitto_brokerage_service.rs
src/services/mqtt_client/: manager.rs  mod.rs  mqtt_client_service.rs  tasks.rs
src/services/mqtt_client/internals/: types.rs
src/services/peer/: peer_service.rs
tests/: ca_operations.rs  ca_service.rs  capabilities.rs  config.rs  handshake.rs  supervisor.rs
